[gd_scene load_steps=12 format=2]

[ext_resource path="res://ObstacleCourse_Part3/practices/03.Saving/UIInventory.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObstacleCourse_Part3/practices/03.Saving/Saving.gd" type="Script" id=2]
[ext_resource path="res://common/fonts/OpenSans-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ObstacleCourse_Part3/practices/03.Saving/inventory.tres" type="Resource" id=4]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.282353, 0.282353, 0.411765, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.188235, 0.188235, 0.286275, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0352941, 0.0392157, 0.12549, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0901961, 0.0941176, 0.188235, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="DynamicFont" id=7]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )
Button/styles/focus = SubResource( 6 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )
Panel/styles/panel = SubResource( 2 )
PanelContainer/styles/panel = SubResource( 2 )
RichTextLabel/fonts/bold_font = null
RichTextLabel/fonts/italics_font = null
RichTextLabel/fonts/normal_font = null

[node name="Saving" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 8 )
script = ExtResource( 2 )

[node name="UIInventory" parent="." instance=ExtResource( 1 )]
inventory = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -264.0
margin_top = -168.0
margin_right = 264.0
margin_bottom = -80.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 20
alignment = 1

[node name="SaveButton" type="Button" parent="Panel/HBoxContainer"]
margin_right = 152.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "Save"

[node name="AddItemButton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 172.0
margin_right = 324.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "Add Item"

[node name="RemoveItemButton" type="Button" parent="Panel/HBoxContainer"]
margin_left = 344.0
margin_right = 496.0
margin_bottom = 56.0
size_flags_horizontal = 3
text = "Remove Item"
